--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,14 @@ name = "tetris-ai"
 version = "0.1.0"
 edition = "2021"
 
-[profile.dev]
-opt-level = 1
+[profile.release]
+debug = true
 
-[profile.dev.package."*"]
-opt-level = 3
+# [profile.dev]
+# opt-level = 1
+
+# [profile.dev.package."*"]
+# opt-level = 3
 
 [workspace]
 resolver = "2"
@@ -27,6 +30,3 @@ criterion = "0.5"
 [[bench]]
 name = "ai_benchmark"
 harness = false
-
-# bevy = { version = "0.12.1", features = ["dynamic_linking"] }
-# bevy_svg = { version = "0.12.0", default-features = false, features = ["2d"] }
